Updated Data Reader
New Structure